fix: Qodana 代码质量修复 — lambda 表达式/字段可见性/Null 安全/资源管理/遗留语法错误
- 19 处块 lambda → 表达式 lambda
- 字段→局部变量 (TrayManager.wndProcStub, ModernCanvasApp.sidebar)
- Null 安全检查 (SettingsStage/ModernCanvasApp CSS 加载, TileGeneratorService.list)
- mkdirs() 返回值处理 + 日志警告
- UpdateManager.raceSources() try-finally 确保 ExecutorService 关闭
- PluginUpdateManager 添加 onCheckComplete 回调，消除 busy-wait 轮询
- 修复 TitleBar/SnifferInstallService 先前 lambda 转换遗留括号错误
- 可见性整理 (Sidebar, ModernCanvasApp)